Build mobile design

--- a/index.html
+++ b/index.html
@@ -5,29 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
       <div class="card-container">
         <section class="col card-header">
-          <h2 class="section-title">Join our community</h2>
-          <p class="section-body">
+          <h2 class="card-header-title">Join our community</h2>
+          <p class="card-header-body">
             Gain access to our full library of tutorials along with expert code
             reviews. Perfect for any developers who are serious about honing
             their skills.
           </p>
-          <p class="guanratee">30-day, hassle-free money back guanratee</p>
+          <p class="card-header-guanratee">
+            30-day, hassle-free money back guanratee
+          </p>
         </section>
-        <section class="col">
+        <section class="col price-section">
           <h3>Monthly Subscription</h3>
-          <p>$29 per month</p>
-          <p>Full access for lees than $1 a day</p>
+          <p class="price">$29 <span>per month</span></p>
+          <p>Full access for less than $1 a day</p>
           <button class="btn btn-primary">Sign Up</button>
         </section>
-        <section class="col">
+        <section class="col features-section">
           <h3>Why Us</h3>
-          <ul>
+          <ul class="features-list">
             <li>Tutorials by industry experts</li>
             <li>Peer & expert code review</li>
             <li>Coding exercises</li>
