Build Desktop design

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="col price-section">
           <h3>Monthly Subscription</h3>
           <p class="price">$29 <span>per month</span></p>
-          <p>Full access for less than $1 a day</p>
+          <p class="offer">Full access for less than $1 a day</p>
           <button class="btn btn-primary">Sign Up</button>
         </section>
         <section class="col features-section">
